fix menu font on mobile

--- a/restaurant/src/Components/Menu/styles.scss
+++ b/restaurant/src/Components/Menu/styles.scss
@@ -207,7 +207,7 @@
     }
     
     &__card {
-      font-size: 1.5rem;
+      font-size: 2rem;
       height: calc(100% - 9rem);
     }
   }
